<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PhotoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>
    <LinearLayout
        android:id="@+id/TOPButtonsDIV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_all"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnIcons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_icon"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_medium"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/helper1"
            android:text="@string/SizeShow_large"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gv_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginTop="@dimen/_5sdp"
        android:clipToPadding="false"
        app:spanCount="3"
        tools:listitem="@layout/card_photo"
        android:scrollbarThumbVertical="@color/grey_5"
        android:scrollbars="vertical" />
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:paddingTop="6dp">

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/appcolor"
            android:background="@drawable/round_corner30"
            android:paddingHorizontal="@dimen/_15sdp"
            android:clickable="true"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/restore_now"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/delete_now" />
        <LinearLayout
            android:id="@+id/SelectDIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="5dp"
                android:text="@string/selectAll" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#ee000000" />
</LinearLayout>
