<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.recover.photo.ui.activity.AboutActivity">
    <include
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FAFAFA"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/spacing_middle"
                        android:paddingBottom="@dimen/spacing_middle">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:layout_width="@dimen/spacing_xxlarge"
                                android:layout_height="@dimen/spacing_xxlarge"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/icon_restore"
                                app:tint="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/photos_recovery"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    android:textColor="@color/grey_80" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/restore_deleted_photos"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/ic_info"
                                app:tint="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/version"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_80"
                                    app:fontFamily="sans-serif-medium" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_1_0_0"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/ic_description"
                                app:tint="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descritoion"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />


                            <View
                                android:layout_width="60dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descripton"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_90" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/spacing_middle"
                        android:paddingBottom="@dimen/spacing_middle">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_mlarge"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_mlarge"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:text="@string/author"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90"
                            app:fontFamily="sans-serif-medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:minHeight="@dimen/spacing_xxlarge"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_medium"
                            android:paddingRight="@dimen/spacing_medium">

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <ImageButton
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/ic_mail"
                                app:tint="@color/grey_40" />

                            <View
                                android:layout_width="@dimen/spacing_mlarge"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/autor"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_80"
                                    app:fontFamily="sans-serif-medium" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/nav_header_subtitle"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>